--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-tensorflow
-tensorflow_intel
-keras
+keras==2.11.0
 matplotlib==3.6.2
 numpy==1.23.5
 opencv_python_headless==4.6.0.66
 scikit_learn==1.1.3
 streamlit==1.15.2
 streamlit_webrtc==0.44.0
+tensorflow==2.11.0
+tensorflow_intel
