--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ streamlit==1.15.2
 streamlit_webrtc==0.44.0
 tensorflow==2.11.0
 tensorflow_intel==2.11.0
-~pencv_contrib_python==4.6.0.66
+opencv-python==4.6.0.66
