--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ scikit_learn==1.1.3
 streamlit==1.15.2
 streamlit_webrtc==0.44.0
 tensorflow==2.11.0
-tensorflow_intel==2.11.0
+tensorflow_intel
 opencv-python==4.6.0.66
